# nerd-watch

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release-docker.yml
src/: main.rs
