[package]
name = "nerd-watch"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nerd-watch"

[dependencies]
anyhow = "1"
bollard = "0.17"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
